JIRA-0000 add local mcs to docker compose

--- a/local/docker-compose.yml
+++ b/local/docker-compose.yml
@@ -3,7 +3,7 @@ networks:
     name: balionis-network
 
 services:
-  local-producer:
+  local-ccs:
     container_name: local-ccs
     hostname: local-ccs
     image: balionis-wise-ccs:latest
@@ -20,6 +20,27 @@ services:
       retries: 3
     volumes:
       - ./docker/config/ccs:/app/config
+    networks:
+      - balionis-network
+    profiles:
+      - service
+  local-mcs:
+    container_name: local-mcs
+    hostname: local-ccs
+    image: balionis-wise-mcs:latest
+    ports:
+      - "9092:9090"
+      - "9002:9000"
+    environment:
+      JAVA_OPTS: "-Dspring.profiles.active=docker -Dlogback.configurationFile=/app/config/logback-docker.xml"
+      JAEGER_TRACING_URL: "http://local-jaeger:9411/api/v2/spans"
+    healthcheck:
+      test: curl -m 5 --silent --fail --request GET http://localhost:9090/api/v1/heartbeat > /dev/null || exit 1
+      interval: 5s
+      timeout: 2s
+      retries: 3
+    volumes:
+      - ./docker/config/mcs:/app/config
     networks:
       - balionis-network
     profiles:
