JIRA-0000 fix typo in prometheus targets

--- a/local/docker/config/prometheus/prometheus.yml
+++ b/local/docker/config/prometheus/prometheus.yml
@@ -9,5 +9,5 @@ scrape_configs:
     scheme: http
     static_configs:
       - targets:
-          - local-css:9000
+          - local-ccs:9000
           - local-mcs:9000
