--- a/local/docker-compose.yml
+++ b/local/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       - service
   local-mcs:
     container_name: local-mcs
-    hostname: local-ccs
+    hostname: local-mcs
     image: balionis-wise-mcs:latest
     ports:
       - "9092:9090"
